enable/disable as form field

--- a/bot/admin/web/src/app/faq/qa/sidebars/qa-sidebar-editor-content/qa-sidebar-editor-content.component.scss
+++ b/bot/admin/web/src/app/faq/qa/sidebars/qa-sidebar-editor-content/qa-sidebar-editor-content.component.scss
@@ -48,3 +48,11 @@ nb-tag-list {
     }
   }
 }
+
+
+/* A distinctive style for critical field */
+.tock-activate-field {
+  color: #856404;
+  background-color: #fff3cd;
+  border-color: #ffeeba;
+}
