--- a/bot/admin/web/src/app/faq/qa/sidebars/qa-sidebar-editor-content/qa-sidebar-editor-content.component.html
+++ b/bot/admin/web/src/app/faq/qa/sidebars/qa-sidebar-editor-content/qa-sidebar-editor-content.component.html
@@ -48,6 +48,15 @@
       </nb-tag-list>
       <mat-hint [ngClass]="'mt-1 w-100 d-block px-2'"><small>Hint: Type text then press 'Enter' to add a new Tag</small></mat-hint>
     </div>
+
+    <div class="tock-field d-flex mb-3 mt-4 p-2 tock-activate-field">
+      <nb-checkbox status="basic" [ngClass]="'mx-2'" formControlName="active"
+      ></nb-checkbox>
+      <label class="d-block mb-1">
+        Actived for Bot <br />
+        <small >Add questions/answer to bot model</small>
+      </label>
+    </div>
   </div>
   <div [ngClass]="(tabName === 'Answer') ? 'tock--active' : 'tock--hidden'">
     <div class="tock-field d-flex h-100 flex-column mb-3 ">
