--- a/bot/admin/web/src/app/faq/qa/sidebars/qa-sidebar-editor-content/qa-sidebar-editor-content.component.html
+++ b/bot/admin/web/src/app/faq/qa/sidebars/qa-sidebar-editor-content/qa-sidebar-editor-content.component.html
@@ -53,7 +53,7 @@
       <nb-checkbox status="basic" [ngClass]="'mx-2'" formControlName="active"
       ></nb-checkbox>
       <label class="d-block mb-1">
-        Actived for Bot <br />
+        Activated for Bot <br />
         <small >Add questions/answer to bot model</small>
       </label>
     </div>
