--- a/bot/admin/web/src/app/faq/common/components/edit-utterance/edit-utterance.component.scss
+++ b/bot/admin/web/src/app/faq/common/components/edit-utterance/edit-utterance.component.scss
@@ -3,6 +3,7 @@
   min-width: 500px;
 }
 
+/* Explanation box style */
 .tock--notice {
   font-size: 13px;
   line-height: 1.4;
@@ -14,10 +15,4 @@
   border-right: 48px solid #fff;
   border-left: 4px solid #fff;
   font-style: oblique;
-}
-
-.tock-alert.tock--warning {
-  color: #856404;
-  background-color: #fff3cd;
-  border-color: #ffeeba;
 }
