--- a/bot/admin/web/src/app/faq/qa/sidebars/qa-sidebar-import-content/qa-sidebar-import-content.component.html
+++ b/bot/admin/web/src/app/faq/qa/sidebars/qa-sidebar-import-content/qa-sidebar-import-content.component.html
@@ -1,3 +1,3 @@
-Choose a .csv or a .json file to import : <br />
+Choose a .json file to import : <br />
 
-<button (click)="importFaq()" class="mr-1" nbButton status="default">Import FAQ</button>
+<input nbInput (click)="importFaq()" type="file" class="mr-1 w-100 mt-3"  status="default" />
