--- a/bot/admin/web/src/app/faq/common/_base_faq.scss
+++ b/bot/admin/web/src/app/faq/common/_base_faq.scss
@@ -1,7 +1,24 @@
+/*
+ * Copyright (C) 2017/2022 e-voyageurs technologies
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 
-/** Common SCSS for FAQ module **/
+/*
+ Common SCSS to all FAQ components
 
-/* TODO: wrap things under a mixin or something like that, because we import all of this every times */
+ TODO: wrap rules under mixins or something like that, to prevent duplicating whole common css per component
+*/
 
 .background {
   background: inherit;
@@ -11,22 +28,20 @@
 }
 
 .tock-divider {
-    min-height: 100%;
-    background: #eee;
-    width: 2px;
+  min-height: 100%;
+  background: #eee;
+  width: 2px;
 }
-
-
 
 .tock-text-muted {
   color: #788189 !important;
 }
 
-.tock--success>nb-icon {
+.tock--success > nb-icon {
   color: #00d68f;
 }
 
-.tock--danger>nb-icon {
+.tock--danger > nb-icon {
   color: red;
 }
 
@@ -35,7 +50,6 @@
 }
 
 .tock-action {
-
   /* because horizontal space is to huge by default */
   padding: 0.6875rem 0.425rem !important; /* Todo: find better solution than !important */
   font-size: 0.8rem !important;
