--- a/bot/admin/web/src/app/faq/common/components/edit-utterance/edit-utterance.component.html
+++ b/bot/admin/web/src/app/faq/common/components/edit-utterance/edit-utterance.component.html
@@ -1,3 +1,19 @@
+<!--
+  ~ Copyright (C) 2017/2022 e-voyageurs technologies
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~ http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+
 <nb-card>
   <!-- DIALOG HEADER -->
   <nb-card-header status="info">{{title}}</nb-card-header>
@@ -12,12 +28,12 @@
       <input nbInput
              type="text"
              placeholder="How many sides does a heptadecagon have?"
+             (keyup.enter)="canSave() && save()"
              [(ngModel)]="value"
              [ngModelChangeDebounceTime]="1000"
              (ngModelChangeDebounced)="ensureUniq($event)"
              fullWidth fieldSize="medium"/>
     </div>
-
     <div *ngIf="!!existingQuestion" class="tock-alert tock--warning mx-5 p-2 mb-4">
       <div class="alert alert-warning" role="alert">
         A similar question would be replaced:
