--- a/bot/admin/web/src/app/faq/qa/qa.component.html
+++ b/bot/admin/web/src/app/faq/qa/qa.component.html
@@ -1,3 +1,19 @@
+<!--
+  ~ Copyright (C) 2017/2022 e-voyageurs technologies
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~ http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+
 <h5 class="h5 mb-4">Questions & Answers {{applicationName}}</h5>
 <tock-qa-header [viewMode]="viewMode"
                 [ngClass]="{ 'tock--docked': isDocked() }"
@@ -15,7 +31,7 @@
 >
   <tock-qa-grid (onEdit)="edit($event)"  [viewMode]="viewMode" [filter]="filter"></tock-qa-grid>
 
-  <tock-inview-sidebar [isContentHeader]="false" [ngClass]="'tock-qa-sidebar'" *ngIf="isPanelDocked('import')" (onClose)="undock()">
+  <tock-inview-sidepanel [isContentHeader]="false" [ngClass]="'tock-qa-sidebar'" *ngIf="isPanelDocked('import')" (onClose)="undock()">
     <div tock-header>
       <h5>Import FAQ</h5>
     </div>
@@ -29,9 +45,9 @@
         Start
       </button>
     </ng-container>
-  </tock-inview-sidebar>
+  </tock-inview-sidepanel>
 
-  <tock-inview-sidebar [isContentHeader]="true" [ngClass]="'tock-qa-sidebar'" *ngIf="isPanelDocked('edit')" (onClose)="undock()">
+  <tock-inview-sidepanel [isContentHeader]="true" [ngClass]="'tock-qa-sidebar'" *ngIf="isPanelDocked('edit')" (onClose)="undock()">
     <div tock-header>
       <h5>{{editorPanelName || 'QA Editor'}}</h5>
     </div>
@@ -78,7 +94,7 @@
       </button>
     </ng-container>
 
-  </tock-inview-sidebar>
+  </tock-inview-sidepanel>
 
 </div>
 
