--- a/bot/admin/web/src/app/faq/qa/sidebars/qa-sidebar-import-content/qa-sidebar-import-content.component.html
+++ b/bot/admin/web/src/app/faq/qa/sidebars/qa-sidebar-import-content/qa-sidebar-import-content.component.html
@@ -14,6 +14,10 @@
   ~ limitations under the License.
   -->
 
-Choose a .json file to import : <br />
+Choose a .json file to import : <br/>
 
-<input nbInput (click)="importFaq()" type="file" class="mr-1 w-100 mt-3"  status="default" />
+<input nbInput type="file"
+       (click)="importFaq()"
+       accept=".json"
+       class="mr-1 w-100 mt-3"
+       status="default"/>
