--- a/bot/admin/web/src/app/faq/common/components/inview-sidepanel/inview-sidepanel.component.html
+++ b/bot/admin/web/src/app/faq/common/components/inview-sidepanel/inview-sidepanel.component.html
@@ -15,7 +15,7 @@
   -->
 
 <div class="tock--sticky">
-  <nb-card [ngClass]="['tock-sidebar-header', 'mt-0', 'ml-0', 'mr-0', 'mb-2', 'w-100']">
+  <nb-card [ngClass]="['tock-sidepanel-header', 'mt-0', 'ml-0', 'mr-0', 'mb-2', 'w-100']">
 
     <!-- SIDE PANEL HEADER -->
     <nb-card-body [ngClass]="['d-flex', 'justify-content-between', 'align-items-center']">
@@ -30,7 +30,7 @@
   </nb-card>
 
   <!-- SIDE PANEL CONTENT WRAPPER -->
-  <nb-card [ngClass]="['mt-0', 'ml-0', 'mr-0', 'w-100', 'tock-sidebar-body']">
+  <nb-card [ngClass]="['mt-0', 'ml-0', 'mr-0', 'w-100', 'tock-sidepanel-body']">
 
     <!-- SIDE PANEL SUB-HEADER/TAB HEADERS -->
     <nb-card-header *ngIf="isContentHeader">
