--- a/bot/admin/web/src/app/faq/train/train-header/train-header.component.scss
+++ b/bot/admin/web/src/app/faq/train/train-header/train-header.component.scss
@@ -14,7 +14,7 @@
  * limitations under the License.
  */
 
-@import url(../../common/_base_faq.scss);
+@import '../../common/_base_faq.scss';
 
 .tock-bar-search {
   width: 400px;
