--- a/bot/admin/web/src/app/faq/train/train-toolbar/train-toolbar.component.html
+++ b/bot/admin/web/src/app/faq/train/train-toolbar/train-toolbar.component.html
@@ -21,7 +21,7 @@
 </div>
 
 
-<nb-form-field [ngClass]="'d-flex'">
+<nb-form-field [ngClass]="'d-flex ml-2'">
   <div class="nb-form-field-addon nb-form-field-prefix-small nb-form-field-addon-basic">
     <nb-icon nbPrefix pack="material-icons" icon="bolt"></nb-icon>
   </div>
