--- a/bot/admin/web/src/app/faq/train/train.component.scss
+++ b/bot/admin/web/src/app/faq/train/train.component.scss
@@ -20,7 +20,7 @@
     flex: 0 0 100%;
   }
 
-  > tock-train-sidebar {
+  > tock-train-sidepanel {
     flex: 0 0 0%;
   }
 }
@@ -32,7 +32,7 @@
     flex: 1 1 auto;
   }
 
-  > tock-train-sidebar {
+  > tock-train-sidepanel {
     flex: 0 0 400px;
   }
 }
