--- a/bot/admin/web/src/app/faq/qa/qa-grid-item/qa-grid-item.component.html
+++ b/bot/admin/web/src/app/faq/qa/qa-grid-item/qa-grid-item.component.html
@@ -14,7 +14,7 @@
   ~ limitations under the License.
   -->
 
-<h6 class="tock--hideable mb-1" [ngClass]="hideableCssClass">{{item.title}}</h6>
+<h6 class="tock-toggleable mb-1" [ngClass]="cssState">{{item.title}}</h6>
 <div class="d-flex w-100 justify-content-between">
   <div class="pb-2 d-flex align-items-center">
     <div class="tock-additional-info d-inline-block ml-1">
@@ -24,30 +24,28 @@
 
   <div class="tock-tags-box pb-2">
     <nb-tag-list>
-      <nb-tag [ngClass]="'mb-0'" size="small" appearance="outline" *ngFor="let tag of item.tags" [text]="tag" [removable]="false"></nb-tag>
+      <nb-tag *ngFor="let tag of item.tags"
+              [ngClass]="'mb-0'"
+              [text]="tag"
+              [removable]="false"
+              size="small" appearance="outline">
+      </nb-tag>
     </nb-tag-list>
   </div>
 </div>
-<nb-card class="overflow-hidden mb-2 tock--hideable" [ngClass]="hideableCssClass">
-  <nb-card-body
-    class="d-flex align-items-center justify-content-between p-2 flex-wrap"
-    [ngClass]="{
-     'tock--docked-panel': isDocked(),
-     'tock--full_width': viewMode === 'FULL_WIDTH',
-     'tock--full_width--small': viewMode === 'RESPONSIVE_FULL_WIDTH'
-     }"
-  >
-    <div class="tock-col-a d-flex justify-content-between">
+<nb-card [ngClass]="['overflow-hidden', 'mb-2', 'tock-toggleable', cssState]">
+  <nb-card-body class="d-flex p-2 justify-content-between overflow-hidden"
+                [ngClass]="isDockedOrSmall() ? CSS_SMALL_CARD_BODY : CSS_WIDER_CARD_BODY">
+    <div [ngClass]="isDockedOrSmall() ? CSS_SMALL_FIRST_CARD_PART : CSS_WIDER_FIRST_CARD_PART">
       {{getFirstUtterance()}}
-      <div class="tock-divider ml-3">&nbsp;</div>
     </div>
+    <div class="tock-divider ml-3">&nbsp;</div>
     <div class="tock-col-b d-flex justify-content-between ">
       {{item.answer}}
-      <div class="tock-divider ml-3">&nbsp;</div>
     </div>
+    <div class="tock-divider ml-3">&nbsp;</div>
     <div class="tock-col-d d-flex justify-content-end">
       <nb-toggle status="basic" [ngModel]="item.enabled" (mousedown)="toggleEnabled($event)">
-
       </nb-toggle>
 
       <button class="tock-action tock--subtle-hover text-muted"
