--- a/bot/admin/web/src/app/faq/qa/qa-grid-item/qa-grid-item.component.scss
+++ b/bot/admin/web/src/app/faq/qa/qa-grid-item/qa-grid-item.component.scss
@@ -14,51 +14,34 @@
  * limitations under the License.
  */
 
-@import url(../../common/_base_faq.scss);
+@import '../../common/_base_faq.scss';
+@include faq-item-style(); /* Better button hover style */
+@include faq-element-behavior(); /* Hiding animation for things */
 
-.status {
-  margin-right: 0.5em;
-  border-radius: 25px;
-  padding: 8px;
-  margin-left: 10px;
-}
-
+/* Fix toggle control position */
 nb-toggle {
   margin-bottom: -.5rem;
   margin-right: 1rem;
 }
 
+/* 1st white box part */
 .tock-col-a {
   flex: 0 0 20%;
   white-space: pre-line;
 }
 
+/* 2nd white box part */
 .tock-col-b {
   flex: 0 0 40%;
   white-space: pre-line;
 }
 
+/* 3rd white box part */
 .tock-col-c {
   flex: 1;
 }
 
-nb-card,nb-card-body {
-  overflow-x: hidden;
-}
-
-.tock--hideable {
-  transition: opacity .5s ease;
-  opacity: 1;
-
-  &.tock--hidden {
-    display: none;
-  }
-
-  &.tock--closed {
-    opacity: .8;
-  }
-}
-
+/* Body of the white box */
 nb-card-body {
 
   /* Ability to add absolute elements inside */
@@ -66,22 +49,34 @@ nb-card-body {
   top: 0;
   left: 0;
 
-  &.tock--docked-panel,&.tock--full_width--small {
+  /* When small screen or reduced available space */
+  &.tock--small {
+    padding-bottom: 5px;
+
     .tock-col-a {
       flex: 0 0 30%;
+      border-bottom: 2px solid $faq-subtle-border-color;
+      padding-bottom: 5px;
     }
 
     .tock-col-b {
       flex: 0 0 45%;
     }
 
+    /* Smaller toggle control */
     nb-toggle {
       transform: scale(0.8);
       margin-right: .1rem;
     }
+
+    /* No divider needed */
+    .tock-divider {
+      display: none;
+    }
   }
 }
 
+/* Explanation text just above the white box */
 .tock-additional-info {
   font-size: 75%;
 }
