last minute changes

--- a/bot/admin/web/src/app/faq/common/_sidepanel_layout.scss
+++ b/bot/admin/web/src/app/faq/common/_sidepanel_layout.scss
@@ -15,8 +15,7 @@
  */
 
 /*
-WIP: this file is not currently used by anything
-TODO: Use this instead of current scss for QA view
+TODO: Use a common sidepanel layout for training view as well
 */
 
 @mixin faq-sidepanel-layout($sidepanel-width: 400px) {
